0.08    
        Fixed edit_conflict template and preview method to cope with stale
          checksum - passes through all the metadata properly now and offers
          a side by side comparison of what you input and what is stored.

0.07    3 May 2003
        Require CGI::Wiki 0.32 to avoid bug (again a Bob find!) where
          committing a node with metadata but no content would die.
        Auto-created category/locale stub pages now added to Category Category
          or Category Locales as appropriate.
        Added a couple of extra allowed HTML tags to cater for existing
          grubstreet data.
        Fixed bug in OpenGuides::RDF - it used to die if called on a
          nonexistent node, now it returns stuff with a wiki:version of 0.

0.06    2 May 2003
        Fixed supersearch.cgi so it works with MySQL as well as Postgres
          (thanks again to Bob for finding the bug).

0.05    2 May 2003
        Redid the script and template installation so the script does
          actually get called what you said it should be (code copied
          somewhat from Siesta::Build).
        Fixed the support for non-local databases/IDENT authentication.
          I think.
        Fixed the hardcoded 'wiki.cgi' in some of the templates (thanks Bob).

0.04    29 April 2003
        First public release.